--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./landingpage.css">
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
 </body>
 </html>
