--- a/index.html
+++ b/index.html
@@ -1,14 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./landingpage.css">
+
+
 </head>
+
 <body>
     <header>
-        <nav></nav>
+        <div>
+            Attend webinar:Bring Your Next Big Idea to life
+            with Digitalocean's AI & ML Tools
+        </div>
     </header>
+    <nav>
+        <a href="">
+            <img src="/images/circle logo.svg" alt=""> <img src="./images/digital ocean.svg" alt="">
+        </a>
+        <ul>
+            <li><a href="" class="list">Products</a></li>
+            <li><a href="" class="list">Solutions</a></li>
+            <li><a href="" class="list">Developers</a></li>
+            <li><a href="" class="list">Partners</a></li>
+            <li><a href="" class="list">Pricing</a></li>
+        </ul>
+
+        <div>
+            Log in <button class="headerbtn">Sign Up</button>
+        </div>
+    </nav>
+    <section class="herosection">
+        <div class="wrapper">
+            <div class="herotext">
+
+                <h1><b>The simplest <br>cloud that scales <br>with you.</b></h1>
+
+                <b>powerful and production-ready,our cloud <br>platform has the solution that devs like you <br>
+                    need to succeed-whether you're building <br>
+                    world-changing AI apps,running a side project,or building a business.<b>
+                        <br><br>
+                        <div class="herobtn">
+                            <button>sign up with email</button>
+                            <br><br>
+                            <button>sign up with Google</button>
+                            <br><br>
+                            <button>sign up with GitHub</button>
+                        </div>
+                        <br><br>
+            </div>
+
+            <div><img class="blueimage" src="./images/images (1).svg" alt=""></div>
+
+            <img class="centerimage" src="./images/images (2).svg" alt="">
+        </div>
+    </section>
+    </header>
+
+    <section class="card"></section>
+    <section>
+        <h1>Introducing the GenAI Platform </h1>
+        <div class="body">
+            <div class="designtext">
+                <p>Eaily build and deploy AI agents powered by advanced third party <br>
+                    generative AI models from leading foundational model providers- <br>
+                    without needing AI expertise.customize your agents with tools like <br>
+                    retrieval augumented-generation(RAG),function calling guardrails,and <br>
+                    agents routing to help you deliver context-aware,task specific <br> responses for your use case.</p>
+                <br>
+                Learn more
+                <br> <br>
+            </div>
+
+            <img class="designimage" src="./images/images.svg" alt="">
+        </div>
+    </section>
+
+    <section>
+        <div class="parentfooter">
+            <div class="layout1">
+                <h3>company</h3>
+                <br><br>
+                About <br> <br>Leadership <br> <br> Blog <br> <br> Careers <br> <br> Customers <br> <br> partners <br>
+                <br>
+                Referal Program <br> <br> affiliate Program <br><br> Press <br> <br> Legal <br> <br>
+                Privacy Policy <br> <br> Security <br> <br> Investors Relations <br> <br>
+                DO impact <br> <br> Nonprofits
+            </div><br><br>
+
+            <div class="layout2">
+                <h3>Products</h3>
+                <br>
+                Overview <br> <br> Droplets <br> <br> Kubernetes <br> <br> Functions <br> <br>
+                App Platform <br> <br> GPU Droplets <br> <br>1-Click Models <br> <br>
+                GenAI Platform <br> <br> Bare Metal GPUs <br> <br> Load Balancer <br> <br>
+                Managed Databases <br> <br> Spaces <br> <br> Block Storage <br> <br>
+                API <br> <br> Uptime <br> <br> Identity Access <br> <br> Management <br> <br>
+                cloudways
+            </div> <br> <br>
+
+            <div class="layout3">
+                <h3>Resources</h3>
+                <br>
+                Community Tutorials <br> <br> Community <br> <br> Q&A <br> <br>
+                CSS-Tricks <br> <br>Write for Donations <br> <br>Currents Research <br> <br> Hatch Startup Program <br>
+                <br>
+                Wavemakers Program <br> <br> compass Council <br> <br> Open Source <br> <br>
+                Newsletter Signup <br> <br> Marketplace <br> <br> Pricing <br> <br>
+                Pricing Calculator <br> <br>Documentation <br> <br> Release Notes <br> <br>
+                Code of Conduct <br> <br>Shop Swag
+            </div>
+
+            <div class="layout4">
+                <h3>Solutions</h3>
+                <br>
+                Website Hosting <br> <br> VPS Hosting <br> <br> Web & Mobile Apps <br> <br>
+                Game Develpoment <br> <br> Streaming <br> <br> VPN <br> <br> SaaS Platforms <br> <br>
+                Cloud Hosting for <br> Blockchain <br> <br> Startup Resources
+            </div>
+
+            <div class="layout5">
+                <h3>Contact</h3>
+                <br>
+                Support <br> <br> Sales <br> <br> Report Abuse <br> <br>
+                System Status <br> <br> Share your ideas
+            </div>
+        </div>
+
+        <div class="finalline">
+            <div class="side1"><img src="./images/circle logo.svg" alt=""> 2025 Digitalocean,LLC. sitemap. cookie preferences</div>
+            <div class="side2"><img src="./images/ex.svg" alt="">
+                <img src="./images/instagram.svg" alt="">
+                <img src="./images/fbook.svg" alt="">
+                <img src="images/two eyes.svg" alt="">
+                <img src="images/ytube.svg" alt="">
+                <img src="images/img(IN).svg" alt="">
+                <img src="images/cat.svg" alt="">
+                <img src="images/box.svg" alt="">
+                <img src="images/bee img.svg" alt="">
+            </div>
+        </div>
+
+       
 </body>
+
+
 </html>
